Bug 386244 - discover ignores refresh errors from apt
Summary: discover ignores refresh errors from apt
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-27 10:27 UTC by Harald Sitter
Modified: 2017-10-27 11:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2017-10-27 10:27:25 UTC
with at least the aptcc packagekit backend discover seems to ignore errors from refresh

```
➜ pkcon refresh; echo $?
Refreshing cache              [=========================]         
Loading cache                 [=========================]         
Downloading packages          [=========================]         
Finished                      [=========================]         
Fatal error: W: The repository 'http://ppa.launchpad.net/colingille/freshlight/ubuntu xenial Release' does not have a Release file.
W: Data from such a repository can't be authenticated and is therefore potentially dangerous to use.
W: See apt-secure(8) manpage for repository creation and user configuration details.

7
```

This error is not communicated in discover at all.
Comment 1 Aleix Pol 2017-10-27 11:49:28 UTC
Git commit 899c821a2c816461f93c03f1c4c4efabb950670d by Aleix Pol.
Committed on 27/10/2017 at 11:47.
Pushed by apol into branch 'Plasma/5.11'.

Show errors from refreshing

M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://commits.kde.org/discover/899c821a2c816461f93c03f1c4c4efabb950670d