Show errors from refreshing

BUG: 386244